--- a/unpackaged/main/default/layouts/Contact-Contact Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/Contact-Contact Layout.layout-meta.xml
@@ -236,7 +236,7 @@
                 <field>MailingAddress</field>
             </layoutItems>
         </layoutColumns>
-        <layoutColumns />
+        <layoutColumns/>
         <style>TwoColumnsTopToBottom</style>
     </layoutSections>
     <layoutSections>
@@ -254,7 +254,7 @@
                 <customLink>GoogleSearch</customLink>
             </layoutItems>
         </layoutColumns>
-        <layoutColumns />
+        <layoutColumns/>
         <style>CustomLinks</style>
     </layoutSections>
     <layoutSections>
@@ -310,7 +310,7 @@
                 <width>100%</width>
             </layoutItems>
         </layoutColumns>
-        <layoutColumns />
+        <layoutColumns/>
         <style>TwoColumnsLeftToRight</style>
     </layoutSections>
     <layoutSections>
@@ -318,7 +318,7 @@
         <detailHeading>false</detailHeading>
         <editHeading>true</editHeading>
         <label>Description Information</label>
-        <layoutColumns />
+        <layoutColumns/>
         <style>OneColumn</style>
     </layoutSections>
     <layoutSections>
@@ -457,6 +457,8 @@
     </relatedLists>
     <relatedLists>
         <fields>NAME</fields>
+        <fields>et4ae5__SubjectLine__c</fields>
+        <fields>CREATED_DATE</fields>
         <relatedList>et4ae5__IndividualEmailResult__c.et4ae5__Contact__c</relatedList>
     </relatedLists>
     <relatedObjects>AccountId</relatedObjects>
