SOM-647/Update invoiceDocument.css

--- a/unpackaged/main/default/staticresources/SOMInvoiceDocumentStyle/invoiceDocument.css
+++ b/unpackaged/main/default/staticresources/SOMInvoiceDocumentStyle/invoiceDocument.css
@@ -19,6 +19,48 @@
 	}
 }
 
+.div1{
+	height: 4px;
+}
+
+.div2{
+	margin-left: 6%;
+}
+
+.Comp_Inf{
+	width: 50% ;
+	text-transform: uppercase;
+}
+
+.Bill_Contact_Inf{
+	width: 50%; 
+	vertical-align: top;
+}
+
+.Invoice_Inf{
+	width: 50%; 
+	vertical-align: top; 
+	text-transform: uppercase;
+} 
+
+.InvoiceLineItem{
+	line-height:15px; 
+	padding-top: 3px;
+}
+
+.lineIem{
+	padding-top: 5px;
+}
+
+.invoiceLine{
+	padding-left: 3px;
+}
+
+.paymentType{
+	text-transform: uppercase;
+}
+
+
 #header{
 	position: running(header);	
 }
@@ -102,6 +144,7 @@ th {
 
 .border_top {
 	border-top: 1px solid #000000;
+	padding-top:2px;
 }
 
 .articles td {
