SOM-611/Payment-PaymentLayout.layout-meta.xml

--- a/unpackaged/main/default/layouts/Payment-Payment Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/Payment-Payment Layout.layout-meta.xml
@@ -55,6 +55,10 @@
                 <behavior>Readonly</behavior>
                 <field>TotalUnapplied</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>paypalCustomerEmail__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
