--- a/unpackaged/main/default/layouts/PaymentAuthorization-Payment Authorization Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/PaymentAuthorization-Payment Authorization Layout.layout-meta.xml
@@ -46,6 +46,10 @@
                 <behavior>Edit</behavior>
                 <field>CustomerTokenDeletionStatus__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>paypalCustomerEmail__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
