Fix Person Account Page Layout

--- a/unpackaged/main/default/layouts/PersonAccount-Person Account Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/PersonAccount-Person Account Layout.layout-meta.xml
@@ -731,6 +731,20 @@
         <relatedList>RelatedContactAccountRelationList</relatedList>
     </relatedLists>
     <relatedLists>
+        <fields>NAME</fields>
+        <fields>et4ae5__SubjectLine__c</fields>
+        <fields>CREATED_DATE</fields>
+        <relatedList>et4ae5__IndividualEmailResult__c.et4ae5__Contact__c</relatedList>
+    </relatedLists>
+    <relatedLists>
+        <fields>OrderSummary__c</fields>
+        <fields>NAME</fields>
+        <fields>Template__c</fields>
+        <fields>Email__c</fields>
+        <fields>CREATED_DATE</fields>
+        <relatedList>TransactionalEmail__c.Client__c</relatedList>
+    </relatedLists>
+    <relatedLists>
         <fields>CONTACT.FULL_NAME</fields>
         <fields>CONTACT.ACCOUNT_NAME</fields>
         <fields>CONTACT.TITLE</fields>
