--- a/unpackaged/main/default/layouts/Sales_Channel_Mapping__mdt-Sales Channel Mapping Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/Sales_Channel_Mapping__mdt-Sales Channel Mapping Layout.layout-meta.xml
@@ -52,6 +52,18 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
+                <field>ChannelType__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>AmountsFormat__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Timezone__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
                 <field>cegidStateUsed__c</field>
             </layoutItems>
         </layoutColumns>
