SOM-766/[SOM] Add New custum field at ReturnOrder

--- a/unpackaged/main/default/layouts/ReturnOrder-Return Order Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/ReturnOrder-Return Order Layout.layout-meta.xml
@@ -47,6 +47,10 @@
                 <behavior>Readonly</behavior>
                 <field>ExchangeROLI__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Carrier__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
@@ -132,9 +136,9 @@
         <detailHeading>false</detailHeading>
         <editHeading>false</editHeading>
         <label>Custom Links</label>
-        <layoutColumns />
-        <layoutColumns />
-        <layoutColumns />
+        <layoutColumns/>
+        <layoutColumns/>
+        <layoutColumns/>
         <style>CustomLinks</style>
     </layoutSections>
     <platformActionList>
