--- a/unpackaged/main/default/layouts/FulfillmentOrder-Fulfillment Order Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/FulfillmentOrder-Fulfillment Order Layout.layout-meta.xml
@@ -26,6 +26,10 @@
                 <behavior>Edit</behavior>
                 <field>BillToContactId</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>sentToToshi__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
