--- a/unpackaged/main/default/layouts/CreditMemo-Credit Memo Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/CreditMemo-Credit Memo Layout.layout-meta.xml
@@ -37,8 +37,8 @@
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
-                <behavior>Required</behavior>
-                <field>CreditDate</field>
+                <behavior>Edit</behavior>
+                <field>Credit_Memo_Date__c</field>
             </layoutItems>
             <layoutItems>
                 <behavior>Readonly</behavior>
@@ -78,7 +78,7 @@
                 <field>TotalAmountWithTax</field>
             </layoutItems>
         </layoutColumns>
-        <layoutColumns />
+        <layoutColumns/>
         <style>TwoColumnsLeftToRight</style>
     </layoutSections>
     <layoutSections>
