--- a/unpackaged/main/default/layouts/ReturnOrder-Return Order Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/ReturnOrder-Return Order Layout.layout-meta.xml
@@ -31,6 +31,10 @@
                 <behavior>Edit</behavior>
                 <field>Already_Refunded__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>expectedPackages__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns/>
         <style>TwoColumnsLeftToRight</style>
