--- a/unpackaged/main/default/layouts/Location-Location Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/Location-Location Layout.layout-meta.xml
@@ -64,6 +64,10 @@
                 <behavior>Edit</behavior>
                 <field>Phone__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>cegidWarehouseCode__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
