--- a/unpackaged/main/default/layouts/Account-Account Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/Account-Account Layout.layout-meta.xml
@@ -77,6 +77,10 @@
                 <field>Record_ID__c</field>
             </layoutItems>
             <layoutItems>
+                <behavior>Readonly</behavior>
+                <field>nb_Client_Sources__c</field>
+            </layoutItems>
+            <layoutItems>
                 <behavior>Edit</behavior>
                 <field>isPurged__c</field>
             </layoutItems>
