--- a/unpackaged/main/default/layouts/OrderSummary-Order Summary Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/OrderSummary-Order Summary Layout.layout-meta.xml
@@ -106,6 +106,10 @@
                 <behavior>Edit</behavior>
                 <field>isOrderOnBehalf__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>IsGlobalE__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
